# Netero

./: .cirrus.yml  .clang-format  .codedocs  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Doxyfile  LICENCE.txt  LICENSE  LICENSE.txt  README.md  docker-compose.yml
Test/: CMakeLists.txt  first.cpp
Test/Core/: core_type_id.cpp
Test/ECS/: ecs_component.cpp  ecs_component_filter.cpp  ecs_dataset.hpp  ecs_entity.cpp  ecs_system.cpp  ecs_world.cpp
audio/: CMakeLists.txt  captureStream.cpp  device.cpp  engine.cpp  mixer.cpp  renderStream.cpp  waveFormat.cpp
audio/backends/CoreAudio/: CoreAudio.cpp  CoreAudio.hpp  CoreAudio_async.cpp  CoreAudio_default_device.cpp  CoreAudio_get_format.cpp  CoreAudio_init.cpp  CoreAudio_start_stop.cpp
audio/backends/Wasapi/: WASAPI.cpp  WASAPI.hpp  WASAPI_async.cpp  WASAPI_capture.cpp  WASAPI_default_devices.cpp  WASAPI_get_devices.cpp  WASAPI_get_format.cpp  WASAPI_init.cpp  WASAPI_poll.cpp  WASAPI_render.cpp  WASAPI_set_device.cpp
audio/engines/CoreAudio/: CoreAudio.cpp  CoreAudio.hpp  CoreAudio_init.cpp  CoreAudio_poll.cpp
audio/engines/win32_callback/: WASAPI.cpp  WASAPI.hpp  WASAPI_async.cpp
audio/format/: waveRecorder.cpp
audio/signals/: sinusoid.cpp
core/: CMakeLists.txt
ecs/: CMakeLists.txt
graphics/: CMakeLists.txt
graphics/backend/: backend.hpp
modules/Audio/: CMakeLists.txt
modules/Audio/Private/: WaveFile.cpp
modules/Core/: CMakeLists.txt
modules/Core/Private/: RandomEngine.cpp
modules/Core/Tests/: CMakeLists.txt  RandomEngine_test.cpp  avl_test.cpp  buffer_test.cpp  set_test.cpp  size_buffer_bug_test.cpp  type_id_test.cpp
modules/Extra/: CMakeLists.txt
modules/Extra/Private/: stb_image.c  stb_image_resize.c  stb_image_write.c  tiny_obj_loader.cpp
modules/Graphics/: CMakeLists.txt
modules/Patterns/: CMakeLists.txt
modules/Patterns/Tests/: CMakeLists.txt  test_signal_container.cpp  test_slot_container.cpp  test_slot_ref.cpp
modules/audio/: CMakeLists.txt  captureStream.cpp  engine.cpp  mixer.cpp  renderStream.cpp
modules/audio/format/: waveRecorder.cpp
modules/audio/old_audio/: CMakeLists.txt
modules/audio/private/: deviceManager.cpp  waveFile.cpp
modules/audio/signals/: sinusoid.cpp
modules/console/: CMakeLists.txt
modules/console/Private/: ProgramArguments.cpp
modules/console/Tests/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/os/: macOsHelpers.cpp  mockOsHelpers.cpp  unixOsHelpers.cpp  windowsOsHelpers.cpp
modules/core/tests/: CMakeLists.txt  bug_size_buffer.cpp  test_avl.cpp  test_buffer.cpp  test_os.cpp  test_set.cpp  test_type_id.cpp
modules/ecs/: CMakeLists.txt
modules/extra/: CMakeLists.txt  stb_image.c  stb_image_write.c
modules/extra/private/: stb_image.c  stb_image_resize.c  stb_image_write.c  tiny_obj_loader.cpp
modules/fast/: CMakeLists.txt
modules/fast/private/: easing_quadratic.cpp  k_filter.cpp
modules/fast/tests/: CMakeLists.txt  easing_test.cpp  k-filter.cpp  mandlebrot.cpp
modules/graphics/: CMakeLists.txt  application.cpp  context.cpp  descriptor.cpp  descriptor_set.cpp  device.cpp  pipeline.cpp  vertex.cpp  vk_descriptor_set.cpp  vk_device.cpp
modules/graphics/context/: command.cpp  context.cpp  graphicsPipeline.cpp  physicalDevices.cpp  shaders.cpp
modules/graphics/device/: device.cpp  vkPhysicalDevice.cpp
modules/graphics/model/: instance.cpp  model.cpp  model_render.cpp  vertex.cpp  vk_model_pipeline.cpp  vk_model_texture.cpp  vk_model_uniform_buffer.cpp
modules/graphics/old/: CMakeLists.txt
modules/graphics/pipeline/: pipeline.cpp  vk_pipeline_uniform_buffer.cpp
modules/graphics/private/: application.cpp  vk_texture.cpp  vk_vertex_buffer.cpp
modules/graphics/renderContext/: Vulkan.hpp  VulkanInstanceCreateAndRelease.cpp  VulkanRenderContext.hpp  renderContext.cpp  vkInstanceCreateAndRelease.cpp  vkRenderContext.cpp  vkRenderContext.hpp  vkSetPhysicalDevice.cpp
modules/graphics/texture/: vkTexture.cpp
modules/graphics/utils/: vkCheckValidationLayerSupport.cpp  vkCommandBuffer.cpp  vkDebugCallbacks.cpp  vkExtentionLoaders.cpp  (+5 more)
modules/memcheck/: CMakeLists.txt  new.cpp  report.cpp
modules/patterns/: CMakeLists.txt
samples/: CMakeLists.txt
samples/VikingRoom/: CMakeLists.txt  main.cpp
samples/audio/: CMakeLists.txt  audio_play_sinus.cpp  audio_record.cpp  play_audio_sinus.cpp  record_audio_to_wave.cpp  scan_audio_devices.cpp
samples/cube/: CMakeLists.txt  cube.entitlements  main.cpp
samples/graphics/: CMakeLists.txt  WindowsRessources.rc
samples/graphicsModel/: CMakeLists.txt  main.cpp
samples/graphicsSurfaces/: CMakeLists.txt  main.cpp
samples/memcheck/: CMakeLists.txt  allocator_sample.cpp  new_sample.cpp
samples/os/: CMakeLists.txt  os_sample.cpp
sources/: CMakeLists.txt
sources/audio/: WASAPI.cpp  audio.cpp  device.cpp  mixer.cpp
sources/ecs/: entity.cpp  entityContainer.cpp  system.cpp  world.cpp  worldCache.cpp
sources/pool/: worker.cpp
test/: CMakeLists.txt  test_avl.cpp  test_set.cpp
test/core/: test_core_type_id.cpp
test/ecs/: ecs_entity.cpp  ecs_system.cpp  ecs_world.cpp  test_ecs_component.cpp  test_ecs_component_filter.cpp  test_ecs_entity.cpp  test_ecs_system.cpp
test/observer/: test_class_call.cpp  test_func_call.cpp  test_slot_ref.cpp
tests/: CMakeLists.txt  bug_size_buffer.cpp  test_avl.cpp  test_buffer.cpp  test_circular_buffer.cpp  test_os.cpp
tests/audio/: example_audio_record.cpp  example_audio_recorde.cpp  example_audio_recorde_silence.cpp  example_audio_render.cpp  test_audio.cpp  test_audio_async.cpp  test_audio_engine_async.cpp  test_audio_engine_poll.cpp  test_audio_event.cpp  test_audio_format.cpp  test_audio_mixer.cpp  test_audio_poll.cpp  test_audio_waveRecorder.cpp
tests/core/: test_core_type_id.cpp
tests/ecs/: test_ecs_component_filter.cpp  test_ecs_dataset.hpp  test_ecs_entity.cpp  test_ecs_world.cpp
tests/memcheck/: test_allocator.cpp  test_new.cpp
tests/observer/: test_class_call.cpp  test_func_call.cpp  test_signal_container.cpp  test_signals.cpp  test_slot_container.cpp  test_slot_ref.cpp
(+454 files in other folders)
